src/qt/res/css/general.css
/* ... */
QWidget .QFrame#frameCoinJoin .QPushButton#toggleCoinJoin { /* Start CoinJoin Mixing */
    margin-top: 5px;
}

QWidget .QFrame#frameCoinJoin .QPushButton#toggleCoinJoin:hover {

}

/******************************************************
OverviewPage RecentTransactions
******************************************************/

QWidget .QFrame#frame_2 { /* Transactions Widget */
    min-width: 430;
}

QWidget .QFrame#frame_2 .QLabel#label_4 { /* Recent Transactions Label */
    margin-right: 0px;
    min-height: 30px;
}

QWidget .QFrame#frame_2 .QLabel#labelTransactionsStatus { /* Recent Transactions Sync Status */
    qproperty-alignment: 'AlignVCenter | AlignLeft';
    color: #a84832;
}

QWidget .QFrame#frame_2 QListView { /* Transaction List */
    background: #00000000;
    margin-right: 10px;
}

/******************************************************
ProposalCreate
******************************************************/
QDialog#ProposalCreate #labelError {
    margin-left: 8px;
}

/******************************************************
ProposalResume
******************************************************/

QDialog#ProposalResume #scrollArea {
    background: transparent;
}

QDialog#ProposalResume #scrollContents {
    background-color: red;
    border: 1px solid red;
    border-radius: 4px;
}

QDialog#ProposalResume #proposalEntry {
    background-color: red;
    border: 1px solid red;
    border-radius: 4px;
}

QDialog#ProposalResume #proposalEntry QTextEdit {
    background: transparent;
    border: none;
}

/******************************************************
ReceiveCoinsDialog
******************************************************/

QWidget#ReceiveCoinsDialog .QFrame {
}

QWidget#ReceiveCoinsDialog .QFrame#frame2 .QLabel#label,
QWidget#ReceiveCoinsDialog .QFrame#frame2 .QLabel#label_2,
QWidget#ReceiveCoinsDialog .QFrame#frame2 .QLabel#label_3,
QWidget#ReceiveCoinsDialog .QFrame#frame .QLabel#label_6 { /* Label Label */
    min-width: 0px;
}

QWidget#ReceiveCoinsDialog .QFrame#frame QTableView#recentRequestsView::item { /* Recent Requests Table */

}

/******************************************************
ReceiveRequestDialog
******************************************************/

ReceiveRequestDialog #outUri {
    margin-top: 20px;
}

/******************************************************
RPCConsole
******************************************************/

QWidget#RPCConsole { /* RPC Console Dialog Box */
}

QWidget#RPCConsole QLabel#label_9,
QWidget#RPCConsole QLabel#labelNetwork,
QWidget#RPCConsole QLabel#label_10,
QWidget#RPCConsole QLabel#labelMempoolTitle,
QWidget#RPCConsole QLabel#label_repair_header,
QWidget#RPCConsole QLabel#peerHeading,
QWidget#RPCConsole QLabel#banHeading {
}

QWidget#RPCConsole QLabel#label_alerts {
    background-color: #c79304;
    color: #222222;
    border-radius: 5px;
    padding: 5px;
}

QWidget#RPCConsole QLabel#labelNetwork,
QWidget#RPCConsole QLabel#label_10,
QWidget#RPCConsole QLabel#labelMempoolTitle { /* Margin between Network and Block Chain headers */
    qproperty-alignment: 'AlignLeft | AlignBottom';
    min-height: 25px;
    margin-top: 10px;
    margin-left: -4px;
}

QWidget#RPCConsole  QLabel#banHeading { /* Peers Info Header */
    min-height: 30px;
    margin-left: -3px;
    margin-bottom: 15px;
}

QWidget#RPCConsole QPushButton#openDebugLogfileButton {
    max-width: 60px;
}

QWidget#RPCConsole QTextEdit#messagesWidget { /* Console Messages Window */
    padding: 10px;
}

QWidget#RPCConsole QLabel#promptLabel { /* Prompt Label */
}

QWidget#RPCConsole QLineEdit#lineEdit { /* Console Input */
    margin-top: 10px;
}

QWidget#RPCConsole .QToolButton { /* Console buttons fontbigger/fontsmaller/clear */
    background-color: #00000000;
    margin-left: 3px;
    margin-bottom:5px;
    border: 0;
}

QWidget#RPCConsole .QGroupBox #line { /* Network In Line */
    background-color: #5e8c41;
}

QWidget#RPCConsole .QGroupBox #line_2 { /* Network Out Line */
    background-color: #a84832;
}

#rpcAutoCompleter {
    border: 1px solid red;
    background-color: red;
}

#rpcAutoCompleter QListView {
    background-color: red;
}

#rpcAutoCompleter::item {
    background-color: #00000000;
    color: red;
}

#rpcAutoCompleter::item:selected {
    color: red;
}


/******************************************************
SendCoinsDialog
******************************************************/

QDialog#SendCoinsDialog .QFrame#frameCoinControl,
QDialog#SendCoinsDialog #scrollArea  { /* Coin Control Section */
    border-bottom: 1px solid red;
}

QDialog#SendCoinsDialog .QFrame#frameCoinControl .QPushButton#pushButtonCoinControl { /* Coin Control Inputs Button */
}

QDialog#SendCoinsDialog .QFrame#frameCoinControl .QLabel#labelCoinControlFeatures { /* Coin Control Header */
}

QDialog#SendCoinsDialog .QFrame#frameCoinControl .QWidget#widgetCoinControl { /* Coin Control Inputs */
}

QDialog#SendCoinsDialog .QFrame#frameCoinControl .QWidget#widgetCoinControl > .QLabel { /* Coin Control Inputs Labels */
    padding: 2px;
}

QDialog#SendCoinsDialog .QFrame#frameCoinControl .QValidatedLineEdit#lineEditCoinControlChange { /* Custom Change Address */
}

QDialog#SendCoinsDialog .QFrame#frameCoinControl .QLabel#labelCoinControlChangeLabel { /* Custom Change Address Validation Label */
    margin-right: 112px;
}

QDialog#SendCoinsDialog .QFrame#frameCoinControl .QLabel#labelCoinControlInsuffFunds { /* Insufficient Funds Label */
    color: #a84832;
}

QDialog#SendCoinsDialog .QScrollArea#scrollArea .QWidget#scrollAreaWidgetContents { /* Send To Widget */
    background-color: #00000000;
}

QDialog#SendCoinsDialog QLabel#labelBalanceName,
QDialog#SendCoinsDialog QLabel#labelBalance {
    qproperty-alignment: 'AlignLeading | AlignLeft';
    min-height: 20px;
    max-height: 20px;
}

QDialog#SendCoinsDialog QLabel#labelBalance {
    margin-right: 10px;
}

QDialog#SendCoinsDialog QPushButton#sendButton {
    margin-left:10px;
}
/* ... */

